Updated Related works

--- a/Paper/Sections/2ReatedWork.tex
+++ b/Paper/Sections/2ReatedWork.tex
@@ -2,22 +2,18 @@
 \label{sec:background}
 
 
-Software based implementation of BLAST algorithm developed by The National Center for Biotechnology Information (NCBI) \cite{ncbiBlast} is widely applied in sequence alignment. CPU based server technology is becoming inefficient with the vast growth in database size as well as enlargement of query sequences. There are several enhancements as two/hit method and gapped BLAST proposed by NCBI to handle with the growth of database and query sizes, and to reduce the computation time \cite{WIENBRANDT20111967}. Still, the software tool takes long runtime and techniques utilized for fast computation is not much useful for such tasks as comparison of several queries at a time. FPGAs which are able to provide a high degree of bit-level parallelism is suitable for tasks in bioinformatics.
+\quad Software based implementation of BLAST algorithm developed by The National Center for Biotechnology Information (NCBI) \cite{ncbiBlast} is widely applied in sequence alignment. However, CPU based server technology is becoming inefficient due to the vast growth in database size as well as enlargement of query sequences. There are several enhancements to improve that efficiency such as two-hit method and Gapped BLAST proposed by NCBI. Those techniques are created to operate with the large database and query sizes, and to reduce the computation time \cite{WIENBRANDT20111967}. In spite of enhancements, the software tool still takes long runtime and techniques utilized for fast computation is not much useful for certain tasks as comparison of several queries simultaneously. Thus, FPGAs are suitable for tasks in bioinformatics, since they to provide a high degree of bit-level parallelism.
 
-\quad FPGAs are applied in sequence comparison in Large Sequence Databanks for the reason that they significantly improve performance due to parallel architecture. There are number of proposed and applied implementations of BLAST algorithm on FPGA in order to address the issue of biological sequence alignment \cite{oliver2005hyper}. The following examples are the proposed hardware implementations of BLAST algorithm: Mercury BLASTn \cite{buhler2007mercury}, Mercury BLASTp \cite{harris2007banded}, Tree-BLAST \cite{herbordt2006single}, RC-BLAST \cite{datta2009}, FPGA/FLASH Accelerator \cite{lavenier2007reconfigurable} and Multiengine BLASTn Accelerator \cite{sotiriades2007design}. 
-\\
+Indeed, FPGAs are applied in sequence comparison in Large Sequence Databanks for the reason that they significantly improve performance due to parallel architecture. There is number of proposed and applied implementations of BLAST algorithm on FPGA in order to address the issue of biological sequence alignment \cite{oliver2005hyper}. Almost all of the implementations are based on one of the two searching strategies. These stargetiges are (1) Word Position Record Based Search (WPRBS) and Systolic array \cite{guo2012systolic}. The latter is a relatively new method and not a widely used technique for implementation of BLAST algorithm. The most of the following implementations are based on WPRBS and the last one implementation is based on Systolic arrays.
 
-The architectures mentioned above are based on the Word Position Record-Based Search (WPRBS) method \cite{guo2012systolic}, which stores words of query sequence in a constructed storage table and compares the subject sequence with storage table to detect the match. The strategy is widely applied, however, performance and searching capacity limitations are still extant. The reason is that during one clock cycle only one word can be searched, and thus more than one hit per clock cycle cannot be detected. Timing issue is also caused by shortage in WPRBS searching capacity due to limited number of memory ports in FPGAs. Examples of such architecture are Mercury BLASTn \cite{buhler2007mercury} and Mitrion \cite{guo2012systolic}. In these two systems, storage tables are stored in the external memory SRAM that is attached to the FPGA, since the tables storing the words of long query sequences will require vast amount of space in internal memory RAM. Searching is performed by comparing one subject sequence from database to every word in the storage table simultaneously during one clock cycle. Apparently, performance of the system will be low: accessing external memory SRAM for getting subject sequence from database every time consumes significant amount of time.    
-\\    
+In WPRBS technique, only one word can be searched per clock, and consequently, only one hit can be found per clock \cite{guo2012open}. Timing issue is also caused by shortage in WPRBS searching capacity due to limited number of memory ports in FPGAs. Examples of such architecture are Mercury BLASTn \cite{buhler2007mercury} and Mitrion \cite{guo2012systolic}. In these two systems, storage tables are stored in the external memory SRAM that is attached to the FPGA, since the tables storing the words of long query sequences will require vast amount of space in internal memory RAM. Searching is performed by comparing one subject sequence from database to every word in the storage table simultaneously during one clock cycle \cite{guo2012systolic}. It is clear that performance of the system will be low: accessing external memory SRAM for getting subject sequence from database every time consumes significant amount of time. 
 
-Performance could be improved by FPGA/FLASH \cite{lavenier2007reconfigurable}, which minimizes accesses to the external memory by enabling to detect several exact matches/hits simultaneously. It is due to index structure of the database: words in the sequence associated with their position in the database and neighboring elements. However, huge space in the memory is needed to store index of the database as well as database itself. For database exponentially growing every year this architecture will not be efficient. 
-\\
+       
+By addressing the above timing issue, FPGA/FLASH \cite{lavenier2007reconfigurable} could achieve better results by minimizing the number of accesses to the external memory. This is done by enabling detection of several exact matches/hits simultaneously. In fact, it is due to index structure of the database: each word is associated with its position in the database and neighboring elements, hence, avoiding random accesses to database \cite{guo2012systolic}. However, huge space in the memory is needed to store index of the database as well as database itself. For database exponentially growing every year, this architecture will not be efficient in terms of storage capacity. In order to achieve better searching results, the architecture Multiengines BLASTn \cite{sotiriades2007design} was constructed. It is still based on WRPBS, but designed in such way that compares 64 subject sequences simultaneously due to its 64 identical computing units. As all of the above mentioned implementations based on WRPBS, this technique suffers from timing and memory limitations. 
 
-In order to solve the timing isuse, the architecture Multiengines BLASTn \cite{sotiriades2007design} is constructed in such way that compares 64 subject sequences simultaneously due to its 64 identical computing units. The architectures described above are based on WPRBS.
-\\
 
-There is another method based on systolic array that does not construct tables. Needleman-Wunsch algorithm \cite{gonnet1992exhaustive} and dynamic programming algorithm that apply systolic array was implemented on SPLASH2 by D. Hoang et. al. \cite{hoang1993searching}. Another algorithm that uses systolic array called Smith Waterman matching algorithm was implemented by S. Guccione et. al., also at Virginia Tech and Nanyang Techological University \cite{yu2003smith}. 
+Most of the above mentioned architectures are not available as an open source project. This limits the capability to comprehend the implementation details thoroughly. However, there are a few projects available as an open source. RC-BLAST \cite{datta2009} and  systolic array-based architecture\cite{guo2012open} are examples of such projects. Although, RC-BLAST is stated to outperform a modern's day general purpose PC computer, this implementation is mostly dependent on the database length, query length and the number of hits identified. For instance, this system's operation linearly depends on the size of the query, that is if query length increases, the FPGA system's performance rises. Also, RC-BLAST's performance drops if there are many hits found, which causes more accesses to the memory to be made \cite{datta2009}.
 
-Most of the above mentioned architectures are not available as an open source project. However, \cite{guo2012open} is available as an open source architecture, which makes it easier to comprehend the implementation details thoroughly. In \cite{guo2012open}, the author presents a systolic array-based FPGA parallel architecture for BLAST algorithm. In the provided architecture, there is so called the Multiple Hits Detection Module, which can find more than one hit per clock cycle. Thus, it makes this architecture faster than above-mentioned WPRBS-based architectures. The speed advantage of this architecture is obtained by merging two adjacent hits into one, and speed up the extension step \cite{guo2012open}. In \cite{guo2012open}, the author states that his proposed architecture manages resource utilization better than Tree-BLAST \cite{herbordt2006single}, performs scanning faster than Mercury BLASTn \cite{buhler2007mercury}, and deals with long sequences more effectively than Mercury BLASTp \cite{harris2007banded}. However, the architecture focuses only on the first two steps of BLAST algorithm: finding the hit and ungapped expansion. In order to detect multiple hits and perform merging two adjacent hits, \cite{guo2012open} added First In First Out (FIFO) buffers and Multiple Hits Detection Module, which resulted in an increase of the resource utilization \cite{guo2012open}.
+In another open source implementation \cite{guo2012open}, the author presents a systolic array-based FPGA parallel architecture for BLAST algorithm. In the provided architecture, there is so called the Multiple Hits Detection Module, which can find more than one hit per clock cycle. Thus, it makes this architecture faster than above-mentioned WPRBS-based architectures. The speed advantage of this architecture is obtained by merging two adjacent hits into one, and speed up the extension step \cite{guo2012open}. In \cite{guo2012open}, the author states that his proposed architecture manages resource utilization better than Tree-BLAST \cite{herbordt2006single}, performs scanning faster than Mercury BLASTn \cite{buhler2007mercury}, and deals with long sequences more effectively than Mercury BLASTp \cite{harris2007banded}. However, the architecture focuses only on the first two steps of BLAST algorithm: finding the hit and ungapped expansion. In order to detect multiple hits and perform merging two adjacent hits, \cite{guo2012open} added First In First Out (FIFO) buffers and Multiple Hits Detection Module, which resulted in an increase of the resource utilization \cite{guo2012open}.
 
 
