--- a/Paper/Sections/ConclusionAndFutureWork.tex
+++ b/Paper/Sections/ConclusionAndFutureWork.tex
@@ -1,8 +1,9 @@
 \section{Conclusion and Future Work}
 \label{sec:concl}
 
+In this paper, we propose the FPGA-based implementation of BLAST algorithm called HBlast. The proposed architecture utilizes the parallel search processing, the efficiency of which is determined in the analysis part. 
 
- - query length is limited by 512 bits
- - expansion waits for hit, hit waits for expansions expansions are not parallel
-- compare query with 512bit loaded database piece, and if there is an exact match no need do expansion and HSP is 1055
-In paper \cite{vipin2019}
+
+Indeed, this project aims to be one of the several FPGA-based implementations of search algorithms. For the time being, the proposed architecture is available as open source and can be accessed by following source \cite{HBlast2019}. The larger project will constitute a library of hardware accelerators targeting cloud-based FPGA instances. The accessibility of the accelerators in the public domain will enable interested organizations to achieve hardware acceleration through cloud-based infrastructures such as Amazon AWS FPGA instances. In fact, this will be effective and suitable for research centres with limited computing facilities. Moreover, by having a communication infrastructure for interfacing the accelerators with standard PCIe and DRAM interfaces, accelerators, such as the proposed one in this paper, could be also used in personal FPGAs.  
+
+
