Resized images for proportionality

--- a/Paper/Sections/3BlastAlgorithm.tex
+++ b/Paper/Sections/3BlastAlgorithm.tex
@@ -5,11 +5,11 @@
 \centering
 	\begin{subfigure}[]
     \centering
-    \includegraphics[width=\columnwidth]{Figures/Algorithm1.pdf} 
+    \includegraphics[width=0.8\columnwidth]{Figures/Algorithm1.pdf} 
     \end{subfigure}
 	\begin{subfigure}[]
     \centering
-    \includegraphics[width=\columnwidth]{Figures/Algorithm2.pdf}
+    \includegraphics[width=0.8\columnwidth]{Figures/Algorithm2.pdf}
 	\end{subfigure}
 	\caption{(a)~Finding W-mers from a query by creating substrings of size 3, (b)~Example of exact match between a querry and a database sequence}
 	\label{fig:step12}
