--- a/Paper/draft.tex
+++ b/Paper/draft.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{todonotes}
 \usepackage{subfigure}
+\usepackage{PGFPlots}
 % Used for displaying a sample figure. If possible, figure files should
 % be included in EPS format.
 %
