Updating background section

--- a/Paper/Sections/4ProposedArchitecture.tex
+++ b/Paper/Sections/4ProposedArchitecture.tex
@@ -141,3 +141,10 @@ The DRAM interface from FPGA is 64-bit wide hence to write 512-bit sequence, 8 w
 \includegraphics[width=\columnwidth]{Figures/bridgeFSM.pdf}
 \caption{FSM diagram for bridge} \label{fig:bridge}
 \end{figure}
+
+
+\begin{figure}[t!]
+\centering
+\includegraphics[width=0.9\columnwidth]{Figures/AwsArch.pdf}
+\caption{HBlast architecture in AWS} \label{fig:awsArch}
+\end{figure}
