--- a/Paper/Sections/1Introduction.tex
+++ b/Paper/Sections/1Introduction.tex
@@ -23,7 +23,7 @@ Although BLAST has been proved to meet the performance and search sensitivity cr
 Statistics imply that the number of genomic sequences is doubling almost every year, and as a consequence hardware acceleration is essential to meet the new requirements \cite{wien2011blastp}. 
 
 We propose an FPGA-based implementation of BLAST algorithm called HBlast, where the DNA search alignment is improved by parallel processing. 
-This work is part of a larger project, which develops a library of hardware accelerators targeting cloud-based FPGA instances.
+This work is part of a larger project, which aims to develop a library of hardware accelerators targeting cloud-based FPGA instances.
 The accelerators will be provided in the public domain, which enables hospitals and research centres with limited computing facilities to achieve hardware acceleration by hosting these accelerators on the cloud infrastructure such as Amazon AWS FPGA instances~\cite{aws2018}.
 Since the cloud billing model is based on usage and instance types, organizations can obtain their solution faster within the budget constraints.
 Accelerators could be also used in on-premises FPGA instances since a communication infrastructure for interfacing the accelerators with standard PCIe and DRAM interfaces is also provided.
