--- a/Paper/Sections/1Introduction.tex
+++ b/Paper/Sections/1Introduction.tex
@@ -5,7 +5,7 @@ Biological sequence alignment algorithms are widely used in Bioinformatics and C
 The algorithm works by identifying the degree of similarity between a newly discovered biological sequence with already known sequences~\cite{kasap2008design}.
 These algorithms can lead to early disease diagnosis, where the biological information of a newly discovered infectant (virus or bacteria) DNA sequence can be obtained by matching it with the most similar disease genes in the database \cite{guo2012systolic}. 
 However, sequence alignment algorithms are highly compute intensive~\cite{datta2009}. 
-This calls for powerful servers for running the software tools and will be beyond the capabilities of small hospitals and research centres.
+This calls for powerful servers for running the software tools and will be beyond the capabilities of small hospitals and research centers.
 Even on high performance computers, often the time required by pure software implementations can vary from several minutes to hours~\cite{masato2016}.  
 
 In recent years, Field Programmable Gate Arrays~(FPGAs) have been proposed as a platform for accelerating bioinformatic applications~\cite{kasap2008design}. 
@@ -20,11 +20,11 @@ There are various biological sequence alignment techniques developed over the pa
 Basic Local Alignment Search Tool~(BLAST) is one of the widely used heuristic methodologies, which delivers the best local alignment for large size of data sets. 
 Due to its heuristic nature, BLAST is much faster than dynamic programming algorithms such as Needleman-Wunsch and Smith-Waterman algorithms \cite{wien2011blastp}. 
 Although BLAST has been proved to meet the performance and search sensitivity criteria, the improvements in DNA sequencing technologies rises new challenges for BLAST. 
-Statistics imply that the number of genomic sequences is doubling almost every year, and as a consequence hardware acceleration is essential to meet the new requirements \cite{wien2011blastp}. 
+Statistics imply that the number of genomic sequences is doubling almost every year, and therefore hardware acceleration is essential to meet the new requirements \cite{wien2011blastp}. 
 
 We propose an FPGA-based implementation of BLAST algorithm called HBlast, where the DNA search alignment is improved by parallel processing. 
 This work is part of a larger project, which aims to develop a library of hardware accelerators targeting cloud-based FPGA instances.
-The accelerators will be provided in the public domain, which enables hospitals and research centres with limited computing facilities to achieve hardware acceleration by hosting these accelerators on the cloud infrastructure such as Amazon AWS FPGA instances~\cite{aws2018}.
+The accelerators will be provided in the public domain, which enables hospitals and research centers with limited computing facilities to achieve hardware acceleration by hosting these accelerators on the cloud infrastructure such as Amazon AWS FPGA instances~\cite{aws2018}.
 Since the cloud billing model is based on usage and instance types, organizations can obtain their solution faster within the budget constraints.
 Accelerators could be also used in on-premises FPGA instances since a communication infrastructure for interfacing the accelerators with standard PCIe and DRAM interfaces is also provided.
 
