--- a/Paper/Sections/3BlastAlgorithm.tex
+++ b/Paper/Sections/3BlastAlgorithm.tex
@@ -13,10 +13,11 @@
 	\end{subfigure}
 	\caption{(a)~Finding W-mers from a query by creating substrings of size 3, (b)~Example of exact match between a query and a database sequence}
 	\label{fig:step12}
+    \vspace{-3 mm}
 \end{figure}
 
-BLAST algorithm is used to search for similar parts of sequences in a database and a query~\cite{Stephen1990}. 
-Both the database and query sequences are represented using strings of English alphabet with each letter representing a nucleobase such as Adenine, Thymine etc.
+BLAST algorithm is used to search for similar parts of biological sequences in a database and a query~\cite{Stephen1990}. 
+Both the database and the query sequences are represented using strings of English alphabet with each letter representing a nucleobase such as Adenine or Thymine.
 There are multiple implementations of BLAST based on the type of data they process. 
 DNA sequence search uses nucleotides with 4-letter  representation and protein search uses amino-acids with 20-letter representation. 
 The inputs to BLAST are two sequences; a database, which consists of a large amount of classified data such as known viral DNAs, and a query, such as a piece of unknown DNA, which has to be compared with the database and find the similar parts. 
@@ -30,7 +31,7 @@ BLAST algorithm consists of 3 primary steps:
 \end{itemize}
 Details of each step is discussed in detail below.
 
-\subsection{Pre-processing}
+\subsubsection{\bf Pre-processing}
 In this step, a query is divided into a list of substrings, as shown in Fig.~\ref{fig:step12}~(a). 
 These substrings are called W-mers of length W~\cite{sotiriades2007design}. 
 Let us assume we have a query DNA sequence ACGTAAARGCAG of length 12 and W-mers of length 3 \cite{sotiriades2007design}. 
@@ -44,20 +45,21 @@ The substring ACG will be the first W-mer, CGT the second and so on.
 
 
 
-\subsection{Searching for hits}
+\subsubsection{\bf Searching for hits}
 After the query is divided and the list of W-mers is generated, the search for exact match between W-mers and database is conducted.
 W-mers are chosen and randomly compared with the portions of the database. 
 Every exact match found is recorded as a ``hit" and saved to process further in step 3 as shown in Fig.~\ref{fig:step12}~(b). 
 
 
-\subsection{Expansion}
+\subsubsection{\bf Expansion}
 After sufficient number of hits are found, each W-mer with exact match is expanded locally to both directions (left and right) by single letter per direction at a time as shown in Fig.~\ref{fig:step3}. 
 The expansion continues until the scoring no longer gets improved.
 \begin{figure}[t!]
 \centering
-\includegraphics[width=\columnwidth]{Figures/Algorithm3.pdf}
-\caption{Example of BLAST Algorithm's Third Step: Expansion of Comparison around Hits} 
-\label{fig:step3}
+    \includegraphics[width=\columnwidth]{Figures/Algorithm3.pdf}
+    \caption{Example of BLAST Algorithm's Third Step: Expansion of Comparison around Hits} 
+    \label{fig:step3}
+    \vspace{-3 mm}
 \end{figure}
 The scoring technique of the algorithm is based on the Point Accepted Mutations~(PAM) matrices, that are used to examine which amino-acid substitutions are biologically accepted~\cite{sotiriades2007design}. 
 However, due to the complexity of this technique, a simpler and biologically acceptable scoring method is generally used. 
